testcases/error-cases/syntax-error-05/error.txt
error[E0013]: invalid token sequence
 --> testcases\error-cases\syntax-error-05\input.canon:3:5
  |
1 | config {
2 |     name = "test"
3 |     = // missing left side of assignment
  |     ^
4 | 
  |
  = note: unexpected '=', expected 'init', 'private', 'get', 'repeated', 'if', 'not', 'this', 'val', 'var', '-', '}', '(', ';', string, double-quoted string, template string start, number, 'true', 'false', annotation, or identifier
  = note: this combination of tokens is not valid
  = help: check the syntax and structure of your code